--- a/changelog/upgrade-guides/breaking-changes.mdx
+++ b/changelog/upgrade-guides/breaking-changes.mdx
@@ -1,200 +1,203 @@
 ---
-title: "Breaking Changes & Migration Paths"
-description: "Explicit callouts of incompatible changes, removal of legacy features, or platform requirement shifts. Includes step-by-step migration strategies and code samples for adapting to new APIs or behaviors."
+title: "Breaking Changes"
+description: "A catalog of API removals, incompatible behavior changes, language standard requirements, and other updates that require user intervention. Explains what was changed, why, and actionable steps to remedy impacted codebases."
 ---
 
-# Breaking Changes & Migration Paths
+# Breaking Changes
 
-This page provides explicit callouts of incompatibilities introduced in GoogleMock, including legacy feature removals and shifts in platform requirements. It guides users through step-by-step migration strategies and includes actionable code samples to adapt to new APIs or behaviors effectively.
-
----
-
-## Understanding Breaking Changes
-
-In evolving software libraries like GoogleMock, certain changes break backward compatibility. This means existing code that depends on older interfaces or behaviors may fail to compile or run correctly with newer versions. This page focuses solely on such changes, helping you identify incompatible modifications and adapt your tests accordingly.
-
-## Key Incompatible Changes
-
-### 1. Transition from `MOCK_METHODn` to Generic `MOCK_METHOD`
-
-GoogleMock has deprecated the older `MOCK_METHODn` family of macros in favor of the generic `MOCK_METHOD` macro around 2018. While the old macros still exist, transitioning to the generic form is strongly recommended, as it provides a unified and more flexible syntax.
-
-- **Old Style:**
-  ```cpp
-  MOCK_METHOD1(Foo, bool(int));
-  MOCK_CONST_METHOD1(Foo, bool(int));
-  MOCK_METHOD1_T(Foo, bool(int));
-  // etc.
-  ```
-
-- **New Style:**
-  ```cpp
-  MOCK_METHOD(bool, Foo, (int), ());
-  MOCK_METHOD(bool, Foo, (int), (const));
-  MOCK_METHOD(bool, Foo, (int), (override));
-  ```
-
-#### Migration Tips:
-- Replace all `MOCK_METHODn` macros with `MOCK_METHOD`, restructuring the arguments accordingly.
-- For const qualifiers, specify `(const)` in the macro's qualifiers.
-- When mocking methods in class templates or with call types, use the full `(specs...)` parameter.
-
-### 2. Mandatory Public Accessibility of Mock Methods
-
-Any mock method created using `MOCK_METHOD` must now reside in the `public:` section of the mock class, even if the corresponding base method is protected or private.
-
-- This adjustment enables external frameworks like `EXPECT_CALL` and `ON_CALL` to access these methods properly.
-
-#### Migration Tips:
-- Move all `MOCK_METHOD` declarations into the public section of your mock class.
-
-### 3. Suppression and Behavior of Uninteresting Calls
-
-GoogleMock defaults to issuing warnings on uninteresting mock calls—calls to mock methods without `EXPECT_CALL` expectations.
-
-- Use `NiceMock<T>` to suppress such warnings.
-- Use `StrictMock<T>` to treat those calls as errors.
-
-#### Migration Tips:
-- Wrap existing mocks with `NiceMock<>` to retain warning suppression behavior or `StrictMock<>` to enforce strict checking.
-- Be aware that mocks inheriting methods with `MOCK_METHOD` in base classes may not fully respect strictness modifiers.
-
-### 4. Refined Argument Matching and Overload Resolution
-
-Newer GoogleMock versions provide better support for matching overloaded functions and resolve ambiguities more strictly.
-
-- Use explicit casting helpers like `SafeMatcherCast<Type>(matcher)` and `Const(mock_object)` when calling `EXPECT_CALL` on overloaded methods.
-
-#### Migration Tips:
-- Adjust your expectations on overloaded methods with explicit disambiguation.
-
-### 5. Enhanced Default Value Behavior
-
-GoogleMock's default return value handling for mock methods is now more predictable:
-
-- For return types with default constructors, the default value is returned.
-- Use `::testing::DefaultValue<T>::Set()` to provide your own default return values when needed.
-
-#### Migration Tips:
-- Review your mock methods' default return values and utilize `DefaultValue` where custom behavior is required.
-
-## Step-by-Step Migration Strategy
-
-### Step 1: Update `MOCK_METHODn` Macros
-
-Search your codebase for `MOCK_METHODn` macros and replace them with the new generic `MOCK_METHOD` syntax.
-
-- Example transformation:
-  ```cpp
-  // Old
-  MOCK_CONST_METHOD1(Foo, bool(int));
-
-  // New
-  MOCK_METHOD(bool, Foo, (int), (const));
-  ```
-
-### Step 2: Ensure Public Access for Mocks
-
-Audit your mock classes to confirm that all `MOCK_METHOD` macros are within the `public:` section.
-
-### Step 3: Address Strictness of Mocks
-
-Decide your desired behavior for uninteresting calls:
-
-- For quiet tests: use `NiceMock<MyMock> mock;`.
-- For strict verification: use `StrictMock<MyMock> mock;`.
-
-### Step 4: Disambiguate Overloads Explicitly
-
-For methods with the same name but different signatures, clarify which overload you expect using explicit casting or helper functions.
-
-### Step 5: Review Default Return Values
-
-Set any necessary custom default return values for your mocks to avoid unexpected semantics during test execution.
-
-## Example: Migrating a Mock Class
-
-```cpp
-// Old-style mock
-class MockFoo : public Foo {
-  MOCK_CONST_METHOD1(Foo, bool(int));
-  MOCK_METHOD2_WITH_CALLTYPE(STDMETHODCALLTYPE, Bar, int(double, float));
-  MOCK_METHOD1(Add, void(int));
-
-  protected:
-  MOCK_METHOD0(Resume, void());
-
-  private:
-  MOCK_METHOD0(GetTimeout, int());
-};
-
-// New-style mock
-class MockFoo : public Foo {
- public:
-  MOCK_METHOD(bool, Foo, (int), (const, override));
-  MOCK_METHOD(int, Bar, (double, float), (Calltype(STDMETHODCALLTYPE), override));
-  MOCK_METHOD(void, Add, (int), (override));
-
-  // Move protected and private mocks to public for accessibility
-  MOCK_METHOD(void, Resume, (), (override));
-  MOCK_METHOD(int, GetTimeout, (), (override));
-};
-```
-
-## Code Samples for Migration
-
-### Wrapping with NiceMock or StrictMock
-
-```cpp
-#include <gmock/gmock.h>
-using ::testing::NiceMock;
-using ::testing::StrictMock;
-
-// Quiet mock
-NiceMock<MockFoo> nice_mock;
-EXPECT_CALL(nice_mock, Foo(_))
-    .WillOnce(Return(true));
-
-// Strict mock
-StrictMock<MockFoo> strict_mock;
-EXPECT_CALL(strict_mock, Foo(42))
-    .Times(1);
-
-// Any other uninteresting calls trigger errors.
-```
-
-### Explicit Overload Disambiguation
-
-```cpp
-using ::testing::Return;
-using ::testing::Const;
-
-EXPECT_CALL(mock, Foo(42));             // Non-const Foo()
-EXPECT_CALL(Const(mock), Foo(42));      // Const Foo()
-
-// SafeMatcherCast example for argument conversion
-EXPECT_CALL(mock, Bar(SafeMatcherCast<double>(Gt(3.14))));
-```
-
-## Common Pitfalls & Troubleshooting
-
-- **Compilation Failures on MOCK_METHOD:** Check for missing parentheses around complex argument types or return types containing commas.
-
-- **Access Issues to Mock Methods:** Verify all mock methods are defined in the `public:` section of your mock class.
-
-- **Unexpected Uninteresting Call Warnings:** Wrap mocks with `NiceMock` to suppress these warnings or add explicit `EXPECT_CALL` with `.Times(AnyNumber())` if intentional.
-
-- **Ambiguous Overloads in EXPECT_CALL:** Use `Const(mock_object)` or explicit `SafeMatcherCast` in `EXPECT_CALL` to clarify expected function signatures.
-
-- **Default Return Value Mismatches:** Use `::testing::DefaultValue<T>::Set()` to define default returns for custom types.
-
-## Additional Resources
-
-- [gMock Cookbook](https://google.github.io/googletest/gmock_cook_book.html) — Practical examples & recipes.
-- [Mocking Reference](https://google.github.io/googletest/reference/mocking.html) — Full API descriptions.
-- [Matchers Reference](https://google.github.io/googletest/gmock_matchers.html) — For custom matchers and advanced matching.
-- [Configuring Expectations and Actions Guide](https://google.github.io/googletest/guides/configuring_expectations_actions.html) — Detailed workflow of EXPECT_CALL and ON_CALL.
+This page catalogs notable breaking changes, API removals, incompatible behavior shifts, language standard updates, and other modifications in GoogleTest and GoogleMock that require your attention and action. Understanding these changes will help ensure your test code continues to build and run correctly after upgrading.
 
 ---
 
-For a seamless and successful migration, carefully prioritize updating mock definitions, controlling mock strictness, and clarifying method overloads. This will ensure your tests remain robust, maintainable, and compatible with the latest GoogleMock releases.
+## 1. Overview of Breaking Changes
+
+Breaking changes can unexpectedly impact the correctness or compilation of your tests. They may involve:
+
+- Removal of deprecated APIs or macros.
+- Changes in method signatures or mock macros.
+- Modifications to language standard requirements (e.g., minimum required C++ version).
+- Behavioral changes that alter matching or invocation expectations.
+
+This section summarizes the rationale behind breaking changes and their implications for users.
+
+### Why Breaking Changes Happen
+
+GoogleTest and GoogleMock evolve to improve robustness, clarity, and maintainability. Occasionally, fixes or improvements require changing or removing existing APIs or behaviors that could break existing test code. These changes are documented here to help you prepare and migrate.
+
+### Preparing for Breaking Changes
+
+- **Review this page before upgrading** to identify changes affecting your code.
+- **Analyze compilation errors and warnings** that arise from upgrading and consult the remediation steps below.
+- Incorporate fixes incrementally, especially in large codebases.
+- Use the migration guidelines documented in the [Upgrade Process & Best Practices](./upgrade-process.md) page.
+
+---
+
+## 2. API Removals and Deprecated Features
+
+### 2.1 Removal of Old `MOCK_METHODn` Macros
+
+Older macros from the `MOCK_METHODn` family have been replaced by the new generalized `MOCK_METHOD` macro:
+
+```cpp
+// Old style
+MOCK_METHOD1(Foo, bool(int));
+
+// New style
+MOCK_METHOD(bool, Foo, (int));
+```
+
+**Action:** Update your mocks to use the new `MOCK_METHOD` macro, which provides better support for qualifiers and improves readability. For details, see the [Mock Class Creation & MOCK_METHOD](../api-reference/mocking-api/mock-class-creation.md) page.
+
+
+### 2.2 Enforced Language Standard Requirements
+
+GoogleTest and GoogleMock now require at least **C++17** to compile. Earlier C++ versions are no longer supported.
+
+- The internal portability utilities enforce this requirement strictly.
+- Attempting to compile on older standards will result in compile-time errors.
+
+**Action:** Update your build configuration to ensure your compiler uses C++17 or later. See the [System Requirements & Prerequisites](../../getting-started/prerequisites-installation/system-requirements.md) page.
+
+---
+
+## 3. Changes in Mocking Macros and Behavior
+
+### 3.1 `MOCK_METHOD` Macro Qualifier Handling
+
+The `MOCK_METHOD` macro now strictly supports qualifiers such as:
+
+- `const`
+- `override`
+- `noexcept`
+- `Calltype(...)` (for Windows calling conventions)
+- `ref(...)` (reference qualifiers)
+
+Example:
+
+```cpp
+MOCK_METHOD(int, GetValue, (), (const, override));
+```
+
+Be aware that incorrect or missing qualifiers may cause compilation failures or unexpected behavior.
+
+**Action:** Check and explicitly specify method qualifiers in your mock method declarations to match the base class signature.
+
+### 3.2 Handling Commas in Parameter Types
+
+When the return type or parameter types of your mock methods involve templates with commas (e.g., `std::pair<int, int>`), you must:
+
+- Wrap the whole type in parentheses, or
+- Use type aliases to simplify.
+
+Example:
+
+```cpp
+// Wrapping in parentheses
+MOCK_METHOD((std::pair<int, int>), GetPair, ());
+
+// Using type alias
+using PairType = std::pair<int, int>;
+MOCK_METHOD(PairType, GetPair, ());
+```
+
+Failing to do this causes macro parsing errors.
+
+---
+
+## 4. Behavioral Changes Affecting Existing Tests
+
+### 4.1 Expectation Matching Order
+
+`EXPECT_CALL` and `ON_CALL` expectations are matched in *reverse order* of their declaration. Newer expectations override older ones. This design allows setting common mock behavior early and then specializing it later.
+
+**Action:** If you had tests relying on older matching order, review the order of your `EXPECT_CALL`s to ensure they are declared from general to more specific expectations.
+
+### 4.2 Sticky Expectations and `.RetiresOnSaturation()`
+
+By default, expectations remain active even after satisfying the lower bound of their cardinality, which can cause unexpected errors if an expectation is matched more times than intended. You may now specify `.RetiresOnSaturation()` explicitly to have expectations retire after being saturated.
+
+Example:
+
+```cpp
+EXPECT_CALL(mock, Foo())
+    .Times(2)
+    .RetiresOnSaturation();
+```
+
+**Action:** Add `.RetiresOnSaturation()` to expectations that should become inactive once their call limit is reached, especially when chaining multiple expectations for the same method.
+
+---
+
+## 5. Migration and Remediation Steps
+
+### 5.1 Updating Mock Classes
+
+- Replace old-style mock macros with new `MOCK_METHOD`.
+- Verify method qualifiers match base class methods exactly.
+- Wrap complex parameter and return types in parentheses or use typedefs.
+
+### 5.2 Testing and Debugging
+
+- Use `--gmock_verbose=info` flag to trace mock calls and expectation matches.
+- Use `NiceMock` or `StrictMock` wrappers to adjust handling of uninteresting or unexpected calls.
+- Inspect failures related to expectation saturation or call ordering.
+
+### 5.3 Compiler and Build Adjustments
+
+- Ensure your compiler supports C++17 or later.
+- Update build scripts accordingly (CMake, Bazel, etc.).
+
+---
+
+## 6. Additional Notes
+
+- The changes to `MOCK_METHOD` and expectation matching enhance correctness, reduce ambiguity, and facilitate more expressive test specifications.
+- Some legacy styles remain supported during transition but should be migrated to maintain future compatibility.
+- Consult the [Mocking FAQ](../../faq/integration-and-optimization/mocking-and-assertion-faq.md) for help on common mock issues.
+
+---
+
+## 7. Troubleshooting Common Breaking Scenarios
+
+### 7.1 Compilation Errors Related to MOCK_METHOD Usage
+
+**Symptoms:** Compiler errors such as macro parsing failures or warnings about qualifier mismatches.
+
+**Solutions:**
+- Wrap complex types involving commas within extra parentheses.
+- Remove meaningless const on value parameters since C++ ignores top-level const on parameters.
+- Add missing qualifiers to mock methods matching the base class.
+
+### 7.2 Unexpected Mock Call Matches or Failures
+
+**Symptoms:** Tests fail because mock calls are matched by unexpected expectations or the number of calls doesn't match.
+
+**Solutions:**
+- Reorder `EXPECT_CALL` declarations so more specific expectations come after general ones.
+- Use `.RetiresOnSaturation()` when chaining multiple expectations in order.
+- Consider using Sequences (`InSequence`) to specify call order explicitly.
+
+### 7.3 Errors Due to Language Standard
+
+**Symptoms:** Compilation refusal citing insufficient C++ version.
+
+**Solution:**
+- Upgrade your compiler and build pipeline to C++17 or newer.
+
+---
+
+## 8. References and Related Documentation
+
+- [Mock Class Creation & MOCK_METHOD](../api-reference/mocking-api/mock-class-creation.md)
+- [Mock Behavior Customization](../api-reference/mocking-api/mock-behavior-customization.md)
+- [Matchers Reference](../api-reference/mocking-api/matchers-reference.md)
+- [Assertions Reference](../api-reference/core-test-api/assertions-reference.md)
+- [Upgrade Process & Best Practices](./upgrade-process.md)
+- [System Requirements & Prerequisites](../../getting-started/prerequisites-installation/system-requirements.md)
+- [gMock for Dummies](../../docs/gmock_for_dummies.md)
+- [Mocking FAQ](../../faq/integration-and-optimization/mocking-and-assertion-faq.md)
+
+---
+
+Keep this page bookmarked to stay informed of critical migration steps ensuring smooth upgrading and maintenance of your GoogleTest and GoogleMock-based tests.
