--- a/overview/product-intro-core-value/what-is-googletest.mdx
+++ b/overview/product-intro-core-value/what-is-googletest.mdx
@@ -1,192 +1,108 @@
 ---
 title: "What is GoogleTest?"
-description: "Introduces GoogleTest as Google's powerful, open-source C++ unit testing framework. Explains its role in automating, discovering, and validating software correctness, supported by a broad ecosystem and rich assertion capabilities. This is the first stop for understanding why GoogleTest matters."
+description: "Learn what GoogleTest is, how it evolved from independent GoogleTest and GoogleMock components, and the problems it solves for C++ developers seeking reliable, scalable, and maintainable unit testing solutions. Catch up on project scope, core principles, and real-world impact."
 ---
 
 # What is GoogleTest?
 
-## Introduction: Google's Powerful C++ Unit Testing Framework
+## Introduction: Understanding GoogleTest
 
-GoogleTest, often referred to as GTest, is Google's open-source C++ unit testing framework designed to help developers automate the discovery, execution, and validation of tests for their software projects. It empowers you to validate software correctness systematically and efficiently, enabling you to catch bugs early, ensure code quality, and build reliable applications.
+GoogleTest is Google's comprehensive C++ testing framework that unifies robust testing and mocking capabilities into a single, powerful toolset. Born from the merging of separate GoogleTest and GoogleMock projects, it is designed to meet the rigorous demands faced by Google and similar large-scale C++ projects. Whether you're working on Linux, Windows, or Mac, GoogleTest offers a reliable and scalable foundation to write, organize, and maintain tests that enhance code quality.
 
-Built on the widely adopted xUnit architecture, GoogleTest harmonizes well-known testing principles with powerful modern features, making it accessible yet robust for projects of any size.
+## Why GoogleTest Matters
 
-## Why GoogleTest Matters to You
+At its core, GoogleTest solves the challenges of creating reliable, maintainable, and fast tests for C++ code:
 
-Imagine spending hours hunting down an elusive bug caused by a subtle edge case in your C++ code. Manually tracking this through logs and breakpoints wastes precious time. With GoogleTest, you can automate test execution, instantly re-run failed tests individually, and receive detailed diagnostics right where the problem occurs—all freeing you up to focus on innovating rather than debugging.
+- **Independence & Repeatability:** Each test runs in isolation ensuring that its outcome is not affected by others, making debugging precise and straightforward.
+- **Organized Structure:** Group tests in logical test suites that reflect actual code structure, simplifying test maintenance and aiding newcomers to the project.
+- **Portability & Reusability:** Platform-neutral design makes your tests adaptable across different operating systems and compiler configurations.
+- **Detailed Failure Information:** Failures do not halt all tests but provide comprehensive messages and continue execution, maximizing the feedback from each test run.
+- **Efficiency:** Shared resources and smart fixture setups reduce redundant overhead, enabling fast tests.
 
-### Key Reasons to Use GoogleTest
+## GoogleTest Evolution
 
-- **Effortless Test Discovery:** Write your tests and GoogleTest will automatically find and run them without manual registration.
-- **Rich Assertions:** Validate conditions precisely with a comprehensive set of assertion macros like `EXPECT_EQ`, `ASSERT_TRUE`, and death tests.
-- **Flexible Test Patterns:** Support for simple tests, test fixtures, parameterized tests, typed tests, and more.
-- **Thread Safety:** Run tests safely in multi-threaded environments where possible.
-- **Cross-Platform Compatibility:** Designed to work smoothly on Linux, Windows, and Mac.
-- **Integration Ecosystem:** Works well alongside other tools and build systems.
+Previously maintained as independent components, GoogleTest and GoogleMock were merged due to their tight integration and complementary roles. This convergence streamlines installation, usage, and maintenance, giving developers a unified interface for writing tests and mocking behaviors. The framework continues to evolve with Google’s standards, requiring modern C++ environments (at least C++17) to ensure powerful language features and safety.
 
-Whether you're developing a small utility or maintaining large complex codebases, GoogleTest streamlines testing and increases confidence in your code’s correctness.
+## Key Characteristics
 
-## What GoogleTest Is: A Clear Definition
+- Based on the widely recognized **xUnit** architecture, making it familiar to users of JUnit or PyUnit.
+- Automatically discovers and runs tests without manual registration.
+- Supports various test types, including death tests, parameterized tests, and typed tests.
+- Rich assertions library that covers Boolean checks, equality, exceptions, floating-point, and more.
+- Allows user-defined assertions and integrates seamlessly with GoogleMock for mocking needs.
+- Advanced features include event listeners, test sharding, and comprehensive reporting through XML or JSON.
 
-GoogleTest is a C++ test framework that automates running *unit tests*: small pieces of code created to verify the behavior of individual components or functions. It makes creating, managing, and running those tests simple and reliable. By writing tests using GoogleTest's macros and APIs, your code’s correctness becomes verifiable, repeatable, and maintainable.
+## GoogleTest in Practice
 
-### The Core Goal
+Imagine you have a C++ project with critical components that need to be verified continuously. GoogleTest allows you to write clear and structured tests that quickly isolate failure reasons. Its cross-platform compatibility means you spend less time adapting tests for different build environments, focusing instead on the actual code quality.
 
-At its heart, GoogleTest aims to reduce manual testing effort and human error by providing automated test execution and rich failure feedback. It enables you to quickly observe what passed or failed and why.
-
-### What Sets GoogleTest Apart
-
-- **Designed by Google:** Adopted internally by Google and deployed across many of their projects.
-- **Merged with GoogleMock:** Seamlessly integrates mocking capabilities (through GoogleMock), although GoogleTest itself focuses on the testing framework.
-- **Standardized and Familiar:** Based on the well-known xUnit architecture, easing adoption.
-
-## GoogleTest Ecosystem and Architecture: How It Works for You
-
-Using GoogleTest is straightforward: include its headers, write test cases marked with macros like `TEST` or `TEST_F`, compile your test executable, and run it. GoogleTest discovers tests at runtime, runs them, and reports results with detailed info on failures.
-
-Behind the scenes, GoogleTest organizes your tests into *test suites* and provides fixtures for setup and teardown, enabling reuse of code across multiple tests.
-
-## Core Features & Capabilities
-
-### 1. Automatic Test Discovery and Execution
-Write tests with familiar macros like:
+### Sample Test:
 
 ```cpp
-TEST(MyFunctionTest, HandlesPositiveInput) {
-  EXPECT_EQ(MyFunction(5), 25);
-}
-```
-GoogleTest automatically finds and runs this test along with others.
-
-### 2. Test Fixtures for Shared Setup
-Use `TEST_F` to reuse setup/teardown logic across related tests:
-
-```cpp
-class WidgetTest : public testing::Test {
- protected:
-  void SetUp() override {
-    widget_under_test = new Widget();
-  }
-  void TearDown() override {
-    delete widget_under_test;
-  }
-
-  Widget* widget_under_test;
-};
-
-TEST_F(WidgetTest, ComputesResultCorrectly) {
-  EXPECT_TRUE(widget_under_test->Compute() > 0);
-}
-```
-
-### 3. Value-Parameterized Tests
-Run the same test logic with different inputs without duplicating test code:
-
-```cpp
-class FactorialTest : public testing::TestWithParam<int> {};
-
-TEST_P(FactorialTest, ReturnsCorrectFactorial) {
-  int n = GetParam();
-  EXPECT_EQ(Factorial(n), ExpectedValue(n));
-}
-
-INSTANTIATE_TEST_SUITE_P(Values, FactorialTest, testing::Values(0,1,2,3,4));
-```
-
-### 4. Type-Parameterized and Typed Tests
-Validate templates or class hierarchies by running tests across different types.
-
-### 5. Rich Assertion Macros
-From simple equality checks (`EXPECT_EQ`) to more specialized ones like `ASSERT_THROW` for exceptions and `EXPECT_DEATH` for death tests, GoogleTest helps write expressive tests.
-
-### 6. Death Tests
-Verify that code terminates as expected under invalid conditions, such as failed assertions or fatal errors.
-
-### 7. Event Listeners and Extensibility
-Extend reporting and test behavior by hooking into test events.
-
-## Real-world Application: How GoogleTest Fits in Your Workflow
-
-By integrating GoogleTest into your daily development:
-
-- Quickly validate code correctness on every change
-- Catch regressions with automated test suites
-- Rapidly debug failing tests using isolated runs
-- Enhance test quality through parameterized tests and coverage
-- Utilize continuous integration pipelines for full automation
-
-## Getting Started Preview
-
-To begin, you’ll typically:
-
-1. **Include GoogleTest headers** in your C++ code.
-2. **Write tests** using `TEST` or `TEST_F` macros.
-3. **Build your test binary** using your build system with GoogleTest linked.
-4. **Run the tests** using the executable; observe clear pass/fail feedback.
-
-Explore the [GoogleTest User's Guide](https://google.github.io/googletest/) for detailed instructions and examples.
-
----
-
-> _Tips:_
->
-> - Test names should avoid underscores (`_`) to prevent naming collisions.
-> - Use fatal assertions (`ASSERT_*`) when subsequent code cannot safely execute on failure.
-> - Use non-fatal assertions (`EXPECT_*`) to continue a test despite failures.
->
-> _Common Pitfalls:_
->
-> - Ensure your test fixture has a default constructor.
-> - Call `testing::InitGoogleTest` before running tests.
-> - Use `RUN_ALL_TESTS()` return value as your program’s exit code.
-
----
-
-Harness the power of GoogleTest to turn your C++ testing into a streamlined, automated, and insightful process, saving time and increasing code reliability.
-
----
-
-## Additional Resources
-
-- [GoogleTest Primer](https://google.github.io/googletest/primer.html): An excellent introduction to writing your first tests.
-- [Assertions Reference](../api-reference/core-testing-api/assertions.md): Comprehensive documentation of GoogleTest assertions.
-- [Parameterized and Typed Tests](../api-reference/core-testing-api/parameterized-and-typed-tests.md): Learn how to write flexible tests with multiple inputs and types.
-- [Building and Integration Guide](googletest/README.md): Instructions for incorporating GoogleTest into your build system.
-
----
-
-## Sample Test Snippet
-
-```cpp
-#include <gtest/gtest.h>
-
-// Simple test without fixture
-TEST(MathTest, HandlesZeroInput) {
+// Example test for Factorial function
+TEST(FactorialTest, HandlesZeroInput) {
   EXPECT_EQ(Factorial(0), 1);
 }
 
-// Test fixture example
-class QueueTest : public testing::Test {
- protected:
-  Queue<int> q_;
-
-  void SetUp() override {
-    q_.Enqueue(1);
-    q_.Enqueue(2);
-  }
-};
-
-TEST_F(QueueTest, DequeueReturnsExpectedValues) {
-  EXPECT_EQ(q_.Dequeue(), 1);
-  EXPECT_EQ(q_.Dequeue(), 2);
-  EXPECT_EQ(q_.Dequeue(), nullptr);
+TEST(FactorialTest, HandlesPositiveInput) {
+  EXPECT_EQ(Factorial(1), 1);
+  EXPECT_EQ(Factorial(3), 6);
+  EXPECT_EQ(Factorial(8), 40320);
 }
 ```
 
-This snippet exemplifies simple and fixture tests, demonstrating GoogleTest's expressive and easy-to-use test macros.
+These tests are grouped logically in the `FactorialTest` suite, showing how GoogleTest groups and reports on test results.
+
+## Getting the Most Out of GoogleTest
+
+- Leverage **test fixtures** (`TEST_F`) for sharing common setup among tests.
+- Use **parameterized tests** (`TEST_P`) to efficiently test functions under multiple input variations.
+- Integrate with **build systems** like CMake for easy compilation and running of tests.
+- Utilize GoogleTest's **extensive assertions** to write expressive and meaningful test expectations.
+
+## Why Should You Care?
+
+Investing in GoogleTest means building confidence in your codebase with minimal overhead. Tests become your safety net guarding against regressions and providing documentation on expected behaviors. The detailed failure insights and flexibility facilitate rapid development cycles with trustworthy verification.
+
+## Where to Go Next
+
+To deepen your understanding and start using GoogleTest effectively, explore the following resources:
+
+- [GoogleTest Primer](https://google.github.io/googletest/primer.html) for an approachable introduction.
+- [Core Testing APIs Reference](https://google.github.io/googletest/reference/testing.html) to understand macros and test management.
+- [Samples](https://github.com/google/googletest/tree/main/googletest/samples) for practical examples.
+- [Advanced GoogleTest Topics](https://google.github.io/googletest/advanced.html) to master complex scenarios and test organization.
+
+<Tip>
+If you are new to unit testing frameworks, GoogleTest’s alignment with xUnit architecture means concepts will feel intuitive if you've worked with JUnit or similar frameworks.
+</Tip>
+
+## Summary
+
+GoogleTest is a modern, versatile, and widely adopted C++ testing framework that empowers developers to write robust and maintainable tests. It harmonizes powerful mocking capabilities, rich assertions, and cross-platform compatibility, all while simplifying test management and execution. Google's continual stewardship ensures GoogleTest remains a best-in-class tool aligned with evolving C++ standards.
 
 ---
 
-## Conclusion
+### See Also
 
-GoogleTest is the first and essential stop on your journey toward reliable automated C++ software testing. It provides a powerful yet intuitive framework, backed by a rich ecosystem and active community, to automate test discovery, execution, and reporting — accelerating your development lifecycle and improving software quality.
+- [Who Should Use GoogleTest?](../overview/product-intro-core-value/target-audience-use-cases)
+- [Quick Feature Overview](../overview/product-intro-core-value/feature-quick-tour)
+- [GoogleTest Primer](../primer.html)
+- [Building and Installing GoogleTest](../googletest/README.md)
+- [GoogleTest User's Guide](../index.md)
+
+---
+
+### External Resources
+
+- Official Repository: [https://github.com/google/googletest](https://github.com/google/googletest)
+- Documentation Homepage: [https://google.github.io/googletest/](https://google.github.io/googletest/)
+
+---
+
+### Related Open Source Projects
+
+- [GTest Runner GUI](https://github.com/nholthaus/gtest-runner) - a GUI tool to run and track GoogleTest executions.
+- [GoogleTest Adapter for VS Code](https://marketplace.visualstudio.com/items?itemName=DavidSchuldenfrei.gtest-adapter) - to view, run, and debug tests within the editor.
+
+---
